<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        card_view:cardCornerRadius="10dp">

        <RelativeLayout
            android:id="@+id/bottommain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/review_enjoying_device_info"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEnjoyNo"
                    style="?android:buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_no"
                    android:fontFamily="sans-serif"
                    android:paddingBottom="0dp"
                    android:paddingTop="0dp"
                    android:text="@string/review_not_really"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnEnjoyYes"
                    style="?android:buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_ok"
                    android:text="@string/review_yes"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>